# pasa-auto

./: .env.example  .gitignore  ACTION_PLAN.md  ACTION_RULES.md  AGENTS.md  CHANGELOG.md  CONTEXT.md  PROJECT_CONTEXT.md  README.md  package-lock.json  package.json  pom.xml  release.sh  test-results.html  update-to-next-version.sh
.claude/: settings.json
.github/workflows/: quarkus-native-build.yml  quarkus-native-windows.yml  secret-scanning.yml  test-coverage.yml
docs/: api.md  application-flow.md  architecture.md  deployment.md  development.md  jwt_setup.md  overview.md  project-context.md  swagger.md
docs/decisions/: 0001-use-quarkus-framework.md  0002-clean-architecture.md  0003-use-postgresql.md  0004-jwt-authentication.md  0005-quasar-frontend.md  0006-flyway-migrations.md  0007-rbac-implementation.md  0008-domain-model-extraction.md  README.md  template.md
electron/: .gitignore  README.md  main.js  manager.css  manager.html  manager.js  package-lock.json  package.json  preload.js  status-panel.html
electron/resources/: upscale_icon.py
electron/resources/ui/: index.html
electron/scripts/: dev.js
src/main/resources/: application.properties  publicKey.pem
src/main/webui/: eslint.config.js  index.html  package-lock.json  package.json  quasar.config.js
src/test/resources/: application-test.properties  application.properties  test-private-key.pem  (+1 more)
tauri/: .gitignore  Cargo.toml  manager.css  manager.html  manager.js  package-lock.json  package.json  tauri.conf.json
tauri/src/: lib.rs  main.rs
tauri/src/capabilities/: default.json
(+239 files in other folders)
